Update pom.xml